# Demetrius-law-chat-bot-ai

./: .gitignore  README.md  article_version_retriver.py  database_creation.ipynb  database_creation.py  database_generation_analysis.py  database_interfaces.py  law_pdf_parser.py  manage.py  pyproject.toml  readme
additional_INFO/data_pdf/jugement/: .~lock.jugement1.odt#  jugement1.odt
additional_INFO/notebooks/: DemetriusChat.ipynb  DemetriusLangChainUpdate.ipynb
database/chromadb/judgment_collections/: chroma.sqlite3
demetrius_react/: tsconfig.json
demetrius_react/src/: App.scss  fonts.css
demetrius_react/src/components/: popup.scss
demetriusapp/: .gitignore  Pipfile  asgi.py  db.sqlite3  pyproject.toml  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.scss  index.tsx
judgement_summary_tool/: apps.py  models.py  openai_request.py  urls.py  views.py
judgement_summary_tool/migrations/: 0001_initial.py  0002_delete_law.py
law_chatbot/: apps.py  consumers.py  models.py  openai_request.py  urls.py  views.py
law_chatbot/middleware/: __init__.py
law_chatbot/migrations/: 0001_initial.py
legal_codes_output/: code_de_l'artisanat_structure.json
static/css/: main.e54bf815.css  main.e54bf815.css.map
static/js/: 787.559890a0.chunk.js  787.559890a0.chunk.js.map  main.5d2dd09f.js  main.5d2dd09f.js.LICENSE.txt  main.5d2dd09f.js.map
users/: models.py  urls.py  views.py
users/decorators/: authenticate.py
users/migrations/: 0001_initial.py  0002_alter_profile_chats.py
(+35 files in other folders)
